ADD - Block visitors referred from Bad Crawler

--- a/app/.htaccess
+++ b/app/.htaccess
@@ -225,6 +225,69 @@ AddDefaultCharset utf-8
   RewriteRule ^(.*)\.slim$ $1.php [L]
 
 
+  # ------------------------------------------------------------------------------
+  # | Block visitors referred from Bad Crawler                                   |
+  # ------------------------------------------------------------------------------
+
+  RewriteCond %{HTTP_REFERER} iedit\.ilovevitaly\.com [NC,OR]
+  RewriteCond %{HTTP_REFERER} iloveitaly\.com [NC,OR]
+  RewriteCond %{HTTP_REFERER} econom\.co [NC,OR]
+  RewriteCond %{HTTP_REFERER} semalt\.com [NC,OR]
+  RewriteCond %{HTTP_REFERER} forum\.topic44637676\.darodar\.com [NC,OR]
+  RewriteCond %{HTTP_REFERER} darodar\.com [NC,OR]
+  RewriteCond %{HTTP_REFERER} iskalko\.ru [NC,OR]
+  RewriteCond %{HTTP_REFERER} ilovevitaly\.ru [NC,OR]
+  RewriteCond %{HTTP_REFERER} ilovevitaly\.com [NC,OR]
+  RewriteCond %{HTTP_REFERER} o-o-8-o-o\.ru [NC,OR]
+  RewriteCond %{HTTP_REFERER} o-o-6-o-o\.ru [NC,OR]
+  RewriteCond %{HTTP_REFERER} buttons-for-website\.com [NC,OR]
+  RewriteCond %{HTTP_REFERER} semalt.semalt\.com [NC,OR]
+  RewriteCond %{HTTP_REFERER} cenoval\.ru [NC,OR]
+  RewriteCond %{HTTP_REFERER} priceg\.com [NC,OR]
+  RewriteCond %{HTTP_REFERER} darodar\.com [NC,OR]
+  RewriteCond %{HTTP_REFERER} cenokos\.ru [NC,OR]
+  RewriteCond %{HTTP_REFERER} seoexperimenty\.ru [NC,OR]
+  RewriteCond %{HTTP_REFERER} gobongo\.info [NC,OR]
+  RewriteCond %{HTTP_REFERER} vodkoved\.ru [NC,OR]
+  RewriteCond %{HTTP_REFERER} adcash\.com [NC,OR]
+  RewriteCond %{HTTP_REFERER} websocial\.me [NC,OR]
+  RewriteCond %{HTTP_REFERER} cityadspix\.com [NC,OR]
+  RewriteCond %{HTTP_REFERER} luxup\.ru [NC,OR]
+  RewriteCond %{HTTP_REFERER} ykecwqlixx\.ru [NC,OR]
+  RewriteCond %{HTTP_REFERER} superiends\.org [NC,OR]
+  RewriteCond %{HTTP_REFERER} slftsdybbg\.ru [NC,OR]
+  RewriteCond %{HTTP_REFERER} edakgfvwql\.ru [NC,OR]
+  RewriteCond %{HTTP_REFERER} socialseet\.ru [NC,OR]
+  RewriteCond %{HTTP_REFERER} screentoolkit\.com [NC,OR]
+  RewriteCond %{HTTP_REFERER} econom\.co [NC,OR]
+  RewriteCond %{HTTP_REFERER} semalt\.com [NC,OR]
+  RewriteCond %{HTTP_REFERER} savetubevideo\.com [NC,OR]
+  RewriteCond %{HTTP_REFERER} shopping\.ilovevitaly\.com [NC,OR]
+  RewriteCond %{HTTP_REFERER} iedit\.ilovevitaly\.com [NC,OR]
+  RewriteCond %{HTTP_REFERER} forum\.topic52548358\.darodar\.com [NC,OR]
+  RewriteCond %{HTTP_REFERER} 7makemoneyonline\.com [NC,OR]
+  RewriteCond %{HTTP_REFERER} make-money-online\.7makemoneyonline\.com [NC,OR]
+  RewriteCond %{HTTP_REFERER} forum\.topic53813291\.darodar\.com [NC,OR]
+  RewriteCond %{HTTP_REFERER} hulfingtonpost\.com [NC,OR]
+  RewriteCond %{HTTP_REFERER} 12masterov\.com [NC,OR]
+  RewriteCond %{HTTP_REFERER} este-line\.com\.ua [NC,OR]
+  RewriteCond %{HTTP_REFERER} bestwebsitesawards\.com [NC,OR]
+  RewriteCond %{HTTP_REFERER} cardiosport\.com\.ua [NC,OR]
+  RewriteCond %{HTTP_REFERER} customsua\.com\.ua [NC,OR]
+  RewriteCond %{HTTP_REFERER} ghazel\.ru [NC,OR]
+  RewriteCond %{HTTP_REFERER} maridan\.com\.ua [NC,OR]
+  RewriteCond %{HTTP_REFERER} med-zdorovie\.com\.ua [NC,OR]
+  RewriteCond %{HTTP_REFERER} dipstar\.org [NC,OR]
+  RewriteCond %{HTTP_REFERER} o-o-6-o-o\.com [NC,OR]
+  RewriteCond %{HTTP_REFERER} it-max\.com\.ua [NC,OR]
+  RewriteCond %{HTTP_REFERER} maridan\.com\.ua [NC,OR]
+  RewriteCond %{HTTP_REFERER} delfin-aqua\.com\.ua [NC,OR]
+  RewriteCond %{HTTP_REFERER} dvr\.biz\.ua [NC,OR]
+  RewriteCond %{HTTP_REFERER} blackhatworth\.com [NC]
+  RewriteCond %{HTTP_REFERER} humanorightswatch\.org [NC]
+  RewriteRule .* – [F]
+
+
 # ------------------------------------------------------------------------------
 # | Mobile Detection                                                           |
 # ------------------------------------------------------------------------------
